--- a/engine.vcxproj
+++ b/engine.vcxproj
@@ -272,17 +272,18 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="game.cpp" />
-    <ClCompile Include="renderer.cpp" />
-    <ClCompile Include="win32_layer.cpp" />
+    <ClInclude Include="libs\simplex.h" />
+    <ClInclude Include="libs\stb\stb_image.h" />
+    <ClInclude Include="src\ady_math.h" />
+    <ClInclude Include="src\ady_types.h" />
+    <ClInclude Include="src\game.h" />
+    <ClInclude Include="src\renderer.h" />
+    <ClInclude Include="src\universal.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="ady_math.h" />
-    <ClInclude Include="ady_types.h" />
-    <ClInclude Include="game.h" />
-    <ClInclude Include="libs\stb\stb_image.h" />
-    <ClInclude Include="renderer.h" />
-    <ClInclude Include="universal.h" />
+    <ClCompile Include="src\game.cpp" />
+    <ClCompile Include="src\renderer.cpp" />
+    <ClCompile Include="src\win32_layer.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
