--- a/engine.vcxproj
+++ b/engine.vcxproj
@@ -274,6 +274,8 @@
   <ItemGroup>
     <ClInclude Include="libs\simplex.h" />
     <ClInclude Include="libs\stb\stb_image.h" />
+    <ClInclude Include="libs\stb\stb_rect_pack.h" />
+    <ClInclude Include="libs\stb\stb_truetype.h" />
     <ClInclude Include="src\ady_math.h" />
     <ClInclude Include="src\ady_types.h" />
     <ClInclude Include="src\game.h" />
