--- a/engine.vcxproj.filters
+++ b/engine.vcxproj.filters
@@ -36,6 +36,12 @@
     <ClInclude Include="src\universal.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="libs\stb\stb_rect_pack.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="libs\stb\stb_truetype.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\game.cpp">
