--- a/engine.vcxproj.filters
+++ b/engine.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="libs\stb\stb_truetype.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="libs\stb\stb_image_write.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\game.cpp">
