--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "libs\\ady_math"]
-	path = libs\\ady_math
+[submodule "libs/ady_math"]
+	path = libs/ady_math
 	url = https://github.com/Andidy/ady-math.git
