--- a/engine.vcxproj.filters
+++ b/engine.vcxproj.filters
@@ -42,6 +42,12 @@
     <ClInclude Include="libs\stb\stb_image_write.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\asset_loading.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="libs\json11-master\json11.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\game.cpp">
@@ -51,6 +57,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\win32_layer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="libs\json11-master\json11.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
