I've lost track of the changes, I know I removed use of Memory for game memory and just have a GameState in the win32 layer since it was only be used for useless casting, and Im trying to convert to using some inheritance to make the code simpler

--- a/engine.vcxproj
+++ b/engine.vcxproj
@@ -281,7 +281,9 @@
     <ClInclude Include="src\ady_types.h" />
     <ClInclude Include="src\asset_loading.h" />
     <ClInclude Include="src\game.h" />
+    <ClInclude Include="src\items.h" />
     <ClInclude Include="src\renderer.h" />
+    <ClInclude Include="src\units.h" />
     <ClInclude Include="src\universal.h" />
   </ItemGroup>
   <ItemGroup>
