--- a/engine.vcxproj.filters
+++ b/engine.vcxproj.filters
@@ -48,6 +48,12 @@
     <ClInclude Include="libs\json11-master\json11.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\items.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\units.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\game.cpp">
