Converted entities to an ecs like system

--- a/engine.vcxproj.filters
+++ b/engine.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClInclude Include="src\units.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\entity.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\game.cpp">
