--- a/engine.vcxproj
+++ b/engine.vcxproj
@@ -280,6 +280,7 @@
     <ClInclude Include="libs\stb\stb_truetype.h" />
     <ClInclude Include="src\ady_types.h" />
     <ClInclude Include="src\asset_loading.h" />
+    <ClInclude Include="src\entity.h" />
     <ClInclude Include="src\game.h" />
     <ClInclude Include="src\items.h" />
     <ClInclude Include="src\renderer.h" />
